[gd_scene load_steps=6 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/gameplay_menu_popup.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/popup_sci-fi-theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.239216, 0.603922, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.682353, 0.0588235, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.686275, 0.494118, 0.0745098, 1 )

[node name="GameplayMenuPopup" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -78.0
margin_right = 344.0
margin_bottom = 125.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 23.0
margin_right = 384.0
margin_bottom = 135.0
custom_constants/separation = 12

[node name="CloseButton" type="Button" parent="VBoxContainer"]
margin_right = 442.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 72.8572, 10.7062 )
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 1 )
text = "Close menu"
icon_align = 1

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 442.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 72.8572, 10.7062 )
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 2 )
text = "     Reset Level    "

[node name="MenuButton" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 442.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 72.8572, 10.7062 )
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 3 )
text = "  Return to Menu  "
